# aws-pipeline

./: .env.example  .gitignore  README.md  aws-pipeline-architecture.excalidraw.json  hello.py  pyproject.toml
.claude/: lessons.md  settings.local.json
data/processed/finanzas/account_types/date=2026-02-12/: account_types.parquet
data/processed/finanzas/accounts/date=2026-02-12/: accounts.parquet
data/processed/finanzas/bank_employees/date=2026-02-12/: bank_employees.parquet
data/processed/finanzas/branches/date=2026-02-12/: branches.parquet
data/processed/finanzas/cards/date=2026-02-12/: cards.parquet
data/processed/finanzas/customers/date=2026-02-12/: customers.parquet
data/processed/finanzas/exchange_rates/date=2026-02-12/: exchange_rates.parquet
data/processed/finanzas/investments/date=2026-02-12/: investments.parquet
data/processed/finanzas/loan_payments/date=2026-02-12/: loan_payments.parquet
data/processed/finanzas/loans/date=2026-02-12/: loans.parquet
data/processed/finanzas/transactions/date=2026-02-12/: transactions.parquet
data/processed/finanzas/transfers/date=2026-02-12/: transfers.parquet
scripts/: 01_setup_s3.py  02_generate_data.py  03_upload_to_s3.py  04_verify_s3.py  05_setup_glue.py  05_setup_glue_simple.py  06_check_crawler.py  07_transform_to_parquet.py  08_crawl_processed.py  09_setup_lifecycle.py
sql/: 01_athena_queries.sql  02_parquet_comparison.sql
src/: __init__.py  config.py  glue_client.py  parquet_transformer.py  s3_client.py
